Resizing added to the other pages. Fixed an issue where footer was too short on IPad.

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,97 +1,222 @@
-html, body {
+/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
+
+body {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 14px;
-	background-attachment: fixed;
-	background-position:center center;
-	background-blend-mode:darken; 
-	color: #FFFFD1;
-	margin: 0 0 0px;
+	background-image: url("../images/background2.jpg");
+	color: #FFFFFF;
 	margin: 0;
+	padding:0;
 	height: 100%;
-	line-height: 1.0;
-	position: relative;
-	width: 100%;
-	resize: both;
-	overflow: auto;
+	overflow: hidden;
+	max-width: 100%
 }
+
+header {
+	font-family: 'Roboto Slab', serif;
+	font-size: 15px;
+	color: #FFFFFF;
+	position: absolute;
+	left: 10px;
+	top:-10px;
+	letter-spacing:1px;
+	font-weight:200;
+	width: 100%;
+	height: 60px;
+}
+
+#footer {
+	width: 100%;
+	height: 45px;
+	position: absolute;
+	bottom:0;
+	background: #333;
+	border-top:1px solid;
+	overflow:hidden;
+}
+
+/*--Start Navigation Bar--*/
 
 /* Remove default link settings*/
 a {
 	text-decoration: none;
 	color: #FFFFFF;
+	padding: 0px;
+	font-weight: bold;
+	font-size: 20px;
+	color: #FFFFFF;
+	position: relative;
 }
 
-/*Navigation Bar*/
-.navigation {
-	width: 100%;
+/*Create the navigation bar*/
+ul.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  border-bottom:1px solid;
+}
+
+/*Arrange the items in the navigation bar (Move to the right and display inline)*/
+ul.navigation li {
+padding-left:300px;
+display:inline-block;
+}
+
+/*Spacing and organising the list*/
+ul.navigation li a {
+  display: inline-block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 17px;
+
+}
+
+
+/*Menu icon is hidden when the page is over the limit specified*/
+ul.navigation li.icon {
+	display: none;
+}
+
+/*Whilst the width is below 480px do the following*/
+@media screen and (max-width:530px) {
+
+/*Hide the links into the menu*/
+ul.navigation li
+  {
+  	display: none;
+  	padding-left: 0px;
+  }
+
+/*Display the menu expanding icon to the right*/
+  ul.navigation li.icon {
+    float: right;
+    display: inline-block;
+  }
+
+/*--Responsive settings--*/
+
+/*How the list should be displayed one the expand button is clicked*/
+
+ ul.navigation.responsive{
+  	position: relative;
+  	padding-top:60px;
+  	width: 100%;
+  }
+
+ ul.navigation.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+ ul.navigation.responsive li {
+    float: none;
+    display: inline;
+  }
+
+ ul.navigation.responsive li a {
+    display: block;
+    text-align: center;
+  }
+
+}
+
+/*--End Navigation Bar--*/
+
+
+/*---------------------------------------------------------------------END MOBILE-VERSION!----------------------------------------------------------------------------------*/
+
+
+/*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
+@media screen and (min-width: 530px) and (max-width: 940px) {
+
+
+/*Create the navigation bar*/
+ul.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  max-width: 1000px;
+  min-width: 1000px;
+}
+
+/*Arrange the items in the navigation bar (Move to the right and display inline)*/
+ul.navigation li {
+padding-left:60px;
+display:inline-block;
+}
+
+/*Spacing and organising the list*/
+ul.navigation li a {
+  display: inline-block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 17px;
+ 
+}
+
+#footer {
+	width: 130%;
 	height: 45px;
 	position: absolute;
-	background: #000000;
-	border-bottom:1px solid
-}
-
-#header {
-	font-family: 'Roboto Slab', serif;
-	font-size: 40px;
-	color: #FFFFFF;
-	position: absolute;
-	left: 650px;
-	top: 300px;
-	letter-spacing:2px;
-	font-weight:700;
+	bottom:0;
+	background: #333;
+	border-top:1px solid;
+	overflow:hidden;
 }
 
 
-a.Homepage {
-
-	padding: 0px;
-	font-weight: bold;
-	font-size: 20px;
-	color: #FFFFFF;
-	position: relative;
-	left: 500px;
 }
 
-a.Projects {
+/*---------------------------------------------------------------------END IPAD/TABLET-VERSION!----------------------------------------------------------------------------------*/
 
-	padding: 0px;
-	font-weight: bold;
-	font-size: 20px;
-	color: #FFFFFF;
-	position: relative;
-	top: 0px;
-	left: 700px;
+
+
+
+
+/*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
+
+@media screen and (min-width: 950px) {
+
+
+ul.navigation {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  max-width: 2000px;
+  min-width: 2000px;
 }
 
-a.About {
-
-	padding: 0px;
-	font-weight: bold;
-	font-size: 20px;
-	color: #FFFFFF;
-	position: relative;
-	top: 0px;
-	left: 900px;
+/*Adding a hover effect*/
+ul.navigation li a:hover {
+	background-color: #555;
 }
 
-a.Contact {
-
-	padding: 0px;
-	font-weight: bold;
-	font-size: 20px;
-	color: #FFFFFF;
-	position: relative;
-	top: 0px;
-	left: 1100px;
-}
 
 /*Footer*/
 #footer {
 	width: 100%;
 	height: 45px;
 	position: absolute;
-	top: 915px;
-	left: 0;
-	background: #000000;
-	border-top:1px solid
+	bottom:0;
+	background: #333;
+	border-top:1px solid;
 }
+
+
+}
+
+
+/*---------------------------------------------------------------------END GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
