--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -9,7 +9,7 @@ body {
 	padding:0;
 	height: 100%;
 	overflow: hidden;
-
+	max-width: 100%
 }
 
 header {
@@ -32,6 +32,7 @@ header {
 	bottom:0;
 	background: #333;
 	border-top:1px solid;
+	overflow:hidden;
 }
 
 /*--Button Links--*/
@@ -83,6 +84,7 @@ ul.navigation {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  border-bottom:1px solid;
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -110,7 +112,7 @@ ul.navigation li.icon {
 }
 
 /*Whilst the width is below 480px do the following*/
-@media screen and (max-width:480px) {
+@media screen and (max-width:530px) {
 
 /*Hide the links into the menu*/
 ul.navigation li
@@ -164,7 +166,8 @@ ul.navigation li
 
 
 /*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
-@media screen and (min-width: 500px) and (max-width: 940px) {
+@media screen and (min-width: 530px) and (max-width: 940px) {
+
 
 header {
 	font-family: 'Roboto Slab', serif;
@@ -218,6 +221,18 @@ ul.navigation li a {
   font-size: 17px;
  
 }
+
+#footer {
+	width: 130%;
+	height: 45px;
+	position: absolute;
+	bottom:0;
+	background: #333;
+	border-top:1px solid;
+	overflow:hidden;
+}
+
+
 }
 
 /*---------------------------------------------------------------------END IPAD/TABLET-VERSION!----------------------------------------------------------------------------------*/
@@ -238,7 +253,6 @@ body {
 	margin: 0;
 	padding:0;
 	height: 100%;
-
 }
 
 header {
@@ -262,7 +276,7 @@ header {
 	top: 500px;
 	max-width: 500px;
     min-width: 500px;
-	
+
 }
 
 
